--- a/front/index.html
+++ b/front/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/LogoIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--<meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">-->
     <title>MeetPoint</title>
   </head>
   <body>
     <div id="root"></div>
     <div id="modal-root"></div>
+
+    <!-- Подключаем Google -->
+    <!--<script src="https://accounts.google.com/gsi/client" async defer></script> --> 
+
+    <!-- Подключаем основное приложение -->
     <script type="module" src="/src/App/ui/main.tsx"></script>
   </body>
 </html>
